Dyntopo: Sculpt brush size shortcut broken when using constant detail setting. #50056

Closed
opened 2016-11-17 10:40:04 +01:00 by Erick Tukuniata · 8 comments

System Information
Operating system and graphics card
win 7 gtx 550ti

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)blender 2.78.3 hash 16e2c0e
Worked: (optional)

Short description of error
Sculpt brush size shortcut broken shift+D in dyntopo when using constant detail setting.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • In sculpt mode activate dyntopo
  • Change the setting to constant detail
  • do shift+D Blender throws a error: couldn't resolve path 'data primary'screen.png
**System Information** Operating system and graphics card win 7 gtx 550ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen)blender 2.78.3 hash 16e2c0e Worked: (optional) **Short description of error** Sculpt brush size shortcut broken shift+D in dyntopo when using constant detail setting. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - In sculpt mode activate dyntopo - Change the setting to constant detail - do shift+D Blender throws a error: couldn't resolve path 'data primary'![screen.png](https://archive.blender.org/developer/F402249/screen.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @zeauro

Added subscriber: @zeauro

Ubuntu 16.04 64bits
master hash 16e2cOe

I confirm the problem with master. There is no problem with 2.78a.

"Detail Size" was renamed to "Resolution" in Constant Detail mode in the UI at this commit 627141082b .
Operators names were changed too. ("constant_detail" to "constant_detail_resolution").

Ubuntu 16.04 64bits master hash 16e2cOe I confirm the problem with master. There is no problem with 2.78a. "Detail Size" was renamed to "Resolution" in Constant Detail mode in the UI at this commit [627141082b ](https://developer.blender.org/rB627141082b12f266adb43478402edd1900240765) . Operators names were changed too. ("constant_detail" to "constant_detail_resolution").

Added subscribers: @JulianEisel, @mont29

Added subscribers: @JulianEisel, @mont29
Julian Eisel was assigned by Bastien Montagne 2016-11-18 12:30:47 +01:00

@JulianEisel this one is all yours :)

@JulianEisel this one is all yours :)

This issue was referenced by 092cbcd1d2

This issue was referenced by 092cbcd1d2c31b10af31ce326bdf4efc2819a5fa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50056
No description provided.