Fix T50056: Dyntopo brush size shortcut broken using constant detail setting.